# nVDB

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md
benches/: bench_insert.rs  bench_recovery.rs  bench_search.rs
docs/: README.md  integration-guide.md  nodejs-integration.md.old  scope-and-boundaries.md  test-documentation.md  user-guide.md
docs/adr/: 001-lsm-lite-storage.md  002-hnsw-index.md  003-simd-distance.md
docs/archive/: development-plan.md  handover-phase1b.md
docs/integrations/: README.md  grpc.md  napi.md  wasm.md
documentation/: architecture.md  filter-dsl.md  nodejs-api.md  rust-api.md
examples/: README.md  basic_usage.rs  rag_system.rs  web_service.rs
napi/: Cargo.toml  GIT-SUBMODULE.md  README.md  index.d.ts  index.js  index.win32-x64-msvc.node  nvdb-node.win32-x64-msvc.node  package.json  setup.js
napi/src/: lib.rs  patch_nvdb.ps1
src/: compaction.rs  error.rs  filter.rs  lib.rs  manifest.rs  segment.rs  wal.rs
tests/: phase1a_locking_tests.rs  phase1a_segment_tests.rs  phase2_search_tests.rs  phase3_hnsw_tests.rs  phase4_filter_tests.rs  phase5_compaction_tests.rs
